{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 28,
  "lineage": "08178b7d-3459-ff7f-8204-a621420b0c41",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sp1_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/networkSecurityGroups/AZB50-SP1-RG_NSG1",
            "location": "eastus",
            "name": "AZB50-SP1-RG_NSG1",
            "resource_group_name": "AZB50-SP1-RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.sp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/networkSecurityGroups/AZB50-SP1-RG_NSG1/securityRules/AZB50-SP1-RG_NSG1_RULE2",
            "name": "AZB50-SP1-RG_NSG1_RULE2",
            "network_security_group_name": "AZB50-SP1-RG_NSG1",
            "priority": 101,
            "protocol": "Icmp",
            "resource_group_name": "AZB50-SP1-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.sp1_nsg",
            "azurerm_resource_group.sp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/networkSecurityGroups/AZB50-SP1-RG_NSG1/securityRules/AZB50-SP1-RG_NSG1_RULE1",
            "name": "AZB50-SP1-RG_NSG1_RULE1",
            "network_security_group_name": "AZB50-SP1-RG_NSG1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "AZB50-SP1-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.sp1_nsg",
            "azurerm_resource_group.sp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/virtualNetworks/AZB50-SP1-RG-vNET1/subnets/AZB50-SP1-RG-Subnet-1",
            "name": "AZB50-SP1-RG-Subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-SP1-RG",
            "virtual_network_name": "AZB50-SP1-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.sp1",
            "azurerm_virtual_network.sp1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/virtualNetworks/AZB50-SP1-RG-vNET1/subnets/AZB50-SP1-RG-Subnet-2",
            "name": "AZB50-SP1-RG-Subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AZB50-SP1-RG",
            "virtual_network_name": "AZB50-SP1-RG-vNET1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.sp1",
            "azurerm_virtual_network.sp1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sp1_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "903430ab-0bec-4075-92be-e74f6b3e6af0",
            "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/virtualNetworks/AZB50-SP1-RG-vNET1",
            "location": "eastus",
            "name": "AZB50-SP1-RG-vNET1",
            "resource_group_name": "AZB50-SP1-RG",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/virtualNetworks/AZB50-SP1-RG-vNET1/subnets/AZB50-SP1-RG-Subnet-1",
                "name": "AZB50-SP1-RG-Subnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.2.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/a7c4673c-e710-4514-b6e1-40cf4d73da90/resourceGroups/AZB50-SP1-RG/providers/Microsoft.Network/virtualNetworks/AZB50-SP1-RG-vNET1/subnets/AZB50-SP1-RG-Subnet-2",
                "name": "AZB50-SP1-RG-Subnet-2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.sp1"
          ]
        }
      ]
    }
  ]
}